--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <div class="nav-bar">
       <div class="logo">
         <div class="logo-large">
-          <img src="./images/logo-large-white.png" alt="terado_engg_logo" />
+          <a href="index.html"
+            ><img src="./images/logo-large-white.png" alt="terado_engg_logo"
+          /></a>
+        </div>
+        <div class="logo-small">
+          <a href="index.html"
+            ><img src="./images/logo-small.png" alt="terado_engg_logo"
+          /></a>
         </div>
       </div>
       <div class="menu-btn">Menu</div>
@@ -21,8 +28,10 @@
       <div class="exit"><img src="./images/close.png" alt="close_icon" /></div>
       <div class="menu-container">
         <ul class="nav-list">
-          <li class="nav"><a href="" class="nav-link">Home</a></li>
-          <li class="nav"><a href="" class="nav-link">About us</a></li>
+          <li class="nav"><a href="index.html" class="nav-link">Home</a></li>
+          <li class="nav">
+            <a href="about us.html" class="nav-link">About us</a>
+          </li>
           <li class="nav"><a href="" class="nav-link">Products</a></li>
           <li class="nav"><a href="" class="nav-link">Contact us</a></li>
         </ul>
@@ -48,8 +57,16 @@
       </div>
     </div>
     <!-- HERO SECTION -->
-    <!-- ABOUT US SECTION -->
+    <div class="hero-sect">WE DO WHAT WORKS</div>
     <!-- SERVICES SECTION -->
+    <div class="services">
+      <h2>WHAT WE OFFER</h2>
+      <p>Software Development</p>
+      <p>UI/UX Design</p>
+      <p>Graphic Design</p>
+      <p>Social Media Marketing</p>
+      <p>Production</p>
+    </div>
     <!-- FOOTER SECTION -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="main.js"></script>
