--- a/about us.html
+++ b/about us.html
@@ -13,6 +13,7 @@
           <h3>About Us</h3>
         </div>
         <div class="about-para">
+          <p>
           We are fiercly independent agency that blends creativity and
           performance to build great brands. Terado believes that strong brand
           identities should be created, and brand expansion should be
@@ -21,12 +22,12 @@
           We are committed to establishing a strong aesthetic and design value
           through all brand communication, and approach every task with extreme
           practicality. We at Terado constantly work to set the stakes for
-          advertising with a game-changer mindset, grit, and determination.
+          advertising with a game-changer mindset, grit, and determination.</p>
         </div>
       </div>
     </div>
     <div class="team">
-      <div class="about-title">
+      <div class="team-title">
         <h3>Meet the Teradians</h3>
       </div>
       <div class="team-img">
