--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Terado Engineering</title>
   </head>
   <body>
+    <!-- PRELOADER -->
+    <div class="preloader"></div>
     <!-- NAVIGATION BAR -->
     <div class="nav-bar">
       <div class="logo">
@@ -32,11 +34,11 @@
           <li class="nav">
             <a href="about us.html" class="nav-link">About us</a>
           </li>
-          <li class="nav"><a href="" class="nav-link">Products</a></li>
+          <li class="nav"><a href="" class="nav-link">Expertise</a></li>
           <li class="nav"><a href="" class="nav-link">Contact us</a></li>
         </ul>
       </div>
-      <div class="menu-container">
+      <div class="info-container">
         <div class="information">
           <div class="info">
             <h3 class="title">Find us at</h3>
