--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     </div>
     <div class="menu">
       <div class="exit"><img src="./images/close.png" alt="close_icon" /></div>
+      <div class="scroll">
+        <img src="./images/scroll down.gif" alt="scroll_icon" />
+        <p>Scroll Down</p>
+      </div>
       <div class="menu-container">
         <ul class="nav-list">
           <li class="nav"><a href="index.html" class="nav-link">Home</a></li>
@@ -42,18 +46,25 @@
         <div class="information">
           <div class="info">
             <h3 class="title">Find us at</h3>
-            <p class="data">315/316,Kingston Court Commercial,Virar(W)</p>
+            <div class="address">
+              314/315, Kingston Court Commercial, Opp Ganpati Mandir, Near Old
+              Viva College, Virar, Maharashtra 401303
+            </div>
           </div>
           <div class="info">
             <h3 class="title">Contact</h3>
-            <p class="data">Email:</p>
-            <p class="data">Phone:</p>
+            <div class="data">Email: info@teradoengineering.com</div>
+            <div class="data">Phone: +91 9860323444</div>
           </div>
           <div class="info">
             <h3 class="title">Follow us on</h3>
-            <p class="data">Instagram</p>
-            <p class="data">Facebook</p>
-            <p class="data">Twitter</p>
+            <div class="socials">
+              <a href="https://www.instagram.com/teradoengineering/"
+                >Instagram</a
+              >
+            </div>
+            <div class="socials"><a href="#">Facebook</a></div>
+            <div class="socials"><a href="#">Twitter</a></div>
           </div>
         </div>
       </div>
