--- a/about us.html
+++ b/about us.html
@@ -5,36 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+    <script src="main.js"></script>
     <title>About us</title>
   </head>
-  <body>
+  <div class="tagline-container">
+
+    <div class="tagline">
+      <p>We're people who genuinely care about what you want and thats why WE DO WHAT WORKS!</p>
+    </div>
+  </div>
     <div class="about-us">
+  
         <div class="about-title">
           <h3>About Us</h3>
         </div>
         <div class="about-para">
-          <p>
-          We are fiercly independent agency that blends creativity and
-          performance to build great brands. Terado believes that strong brand
-          identities should be created, and brand expansion should be
-          encouraged. Our strategy is founded on the notion that encouraging
-          brand expansion supports the growth of the business, which is visible.
-          We are committed to establishing a strong aesthetic and design value
-          through all brand communication, and approach every task with extreme
-          practicality. We at Terado constantly work to set the stakes for
-          advertising with a game-changer mindset, grit, and determination.</p>
+          <p>We are fiercly independent agency that blends creativity and performance to build great brands. Terado believes that strong brand identities should be created, and brand expansion should be encouraged. Our strategy is founded on the notion that encouraging brand expansion supports the growth of the business, which is visible. We are committed to establishing a strong aesthetic and design value through all brand communication, and approach every task with extreme practicality. We at Terado constantly work to set the stakes for advertising with a game-changer mindset, grit, and determination.</p>
         </div>
       </div>
-    </div>
-    <div class="team">
+
+      <div class="why-container">
+        <div class="why-we">
+          <h3>Why we do it?</h3>
+        </div>
+        <div class="why-we-para">
+          <p>We believe in making your brand to make ground-breaking, industry-defining, heart-racing moves. The kind of work that speaks to possibility and progress, unlocking opportunity to drive positive impact for your brand and for the world around us. A team of 20+ experimental and edgy minds who believe in creating advertising & marketing campaigns, communications, websites, visual branding, strategy, production, much more in the space including everything from print to screen. Think of two points: Design & Communication. We are the bridge</p>
+        </div>
+      </div>
+    <!-- <div class="team">
       <div class="team-title">
         <h3>Meet the Teradians</h3>
       </div>
       <div class="team-img">
         
       </div>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
-    <script src="main.js"></script>
+    </div> -->
+  
   </body>
 </html>
