--- a/about us.html
+++ b/about us.html
@@ -11,9 +11,11 @@
   </head>
   <div class="tagline-container">
 
-    <div class="tagline">
-      <p>We're people who genuinely care about what you want and thats why WE DO WHAT WORKS!</p>
-    </div>
+    <div class="tagline-small">
+      <p>We're people who genuinely care about what you want and thats why </p></div>
+      <div class="tag-capital">
+      <p>We Do What Works!</p>
+      </div>
   </div>
     <div class="about-us">
   
@@ -31,6 +33,18 @@
         </div>
         <div class="why-we-para">
           <p>We believe in making your brand to make ground-breaking, industry-defining, heart-racing moves. The kind of work that speaks to possibility and progress, unlocking opportunity to drive positive impact for your brand and for the world around us. A team of 20+ experimental and edgy minds who believe in creating advertising & marketing campaigns, communications, websites, visual branding, strategy, production, much more in the space including everything from print to screen. Think of two points: Design & Communication. We are the bridge</p>
+        </div>
+      </div>
+
+      <div class="value-container">
+        <div class="value-wrapper">
+          <h3>Our Principles</h3>
+          <h3>Our Principles</h3>
+          <h3>Our Principles</h3>
+          <h3>Our Principles</h3>
+        </div>
+        <div class="value-para">
+
         </div>
       </div>
     <!-- <div class="team">
