--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
       <div class="logo">
         <div class="logo-large">
           <a href="index.html"
-            ><img src="./images/logo-large-white.png" alt="terado_engg_logo"
+            ><img src="images/logo-large-black.png" alt="terado_engg_logo"
           /></a>
         </div>
         <div class="logo-small">
           <a href="index.html"
-            ><img src="./images/logo-small.png" alt="terado_engg_logo"
+            ><img src="images/logo-small.png" alt="terado_engg_logo"
           /></a>
         </div>
       </div>
       <div class="menu-btn">Menu</div>
     </div>
     <div class="menu">
-      <div class="exit"><img src="./images/close.png" alt="close_icon" /></div>
+      <div class="exit"><img src="images/close.png" alt="close_icon" /></div>
       <div class="scroll">
-        <img src="./images/scroll down.gif" alt="scroll_icon" />
+        <img src="images/scroll down.gif" alt="scroll_icon" />
         <p>Scroll Down</p>
       </div>
       <div class="menu-container">
@@ -81,6 +81,7 @@
       <p>Production</p>
     </div>
     <!-- FOOTER SECTION -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="main.js"></script>
   </body>
