--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
           <li class="nav">
             <a href="about us.html" class="nav-link">About us</a>
           </li>
-          <li class="nav"><a href="" class="nav-link">Expertise</a></li>
           <li class="nav"><a href="" class="nav-link">Contact us</a></li>
         </ul>
       </div>
@@ -73,7 +72,7 @@
     <div class="hero-sect">WE DO WHAT WORKS</div>
     <!-- SERVICES SECTION -->
     <div class="services">
-      <h2>WHAT WE OFFER</h2>
+      <h2>WHAT WE DO</h2>
       <p>Software Development</p>
       <p>UI/UX Design</p>
       <p>Graphic Design</p>
