--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
     </div>
     <div class="menu">
       <div class="exit"><img src="images/close.png" alt="close_icon" /></div>
-      <div class="scroll">
-        <img src="images/scroll down.gif" alt="scroll_icon" />
-        <p>Scroll Down</p>
-      </div>
       <div class="menu-container">
         <ul class="nav-list">
           <li class="nav"><a href="index.html" class="nav-link">Home</a></li>
@@ -72,7 +68,7 @@
     <div class="hero-sect">WE DO WHAT WORKS</div>
     <!-- SERVICES SECTION -->
     <div class="services">
-      <h2>WHAT WE DO</h2>
+      <h2 class="service-title">WHAT WE DO</h2>
       <p>Software Development</p>
       <p>UI/UX Design</p>
       <p>Graphic Design</p>
