--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
           <li class="nav">
             <a href="about us.html" class="nav-link">About us</a>
           </li>
+          <li class="nav">
+            <a href="#" class="nav-link">Careers</a>
+          </li>
+          <li class="nav">
+            <a href="#" class="nav-link">Portfolio</a>
+          </li>
           <li class="nav"><a href="" class="nav-link">Contact us</a></li>
         </ul>
       </div>
@@ -43,7 +49,7 @@
             <h3 class="title">Find us at</h3>
             <div class="address">
               314/315, Kingston Court Commercial, Opp Ganpati Mandir, Near Old
-              Viva College, Virar, Maharashtra 401303
+              Viva College, Virar(W), Maharashtra 401303
             </div>
           </div>
           <div class="info">
@@ -53,13 +59,15 @@
           </div>
           <div class="info">
             <h3 class="title">Follow us on</h3>
-            <div class="socials">
-              <a href="https://www.instagram.com/teradoengineering/"
-                >Instagram</a
-              >
+            <div class="soc-links">
+              <div class="socials">
+                <a href="https://www.instagram.com/teradoengineering/"
+                  >Instagram</a
+                >
+              </div>
+              <div class="socials"><a href="#">Facebook</a></div>
+              <div class="socials"><a href="#">Linkedin</a></div>
             </div>
-            <div class="socials"><a href="#">Facebook</a></div>
-            <div class="socials"><a href="#">Twitter</a></div>
           </div>
         </div>
       </div>
